--- a/src/__main__/AuthFrame.form
+++ b/src/__main__/AuthFrame.form
@@ -154,9 +154,9 @@
                           <Component id="pwd_textfield" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="12" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="btn_exit" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="login_btn" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="login_btn" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
