--- a/src/gui/warehouse_dispatch/WAREHOUSE_DISPATCH_UI0004_NEW_PLAN.form
+++ b/src/gui/warehouse_dispatch/WAREHOUSE_DISPATCH_UI0004_NEW_PLAN.form
@@ -136,7 +136,7 @@
                     <Property name="text" type="java.lang.String" value="Magasin F.G"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="warehouse_filter">
+                <Component class="javax.swing.JComboBox" name="fg_warehouse_filter">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="12" style="0"/>
@@ -146,9 +146,9 @@
                     </Property>
                   </Properties>
                   <Events>
-                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="warehouse_filterItemStateChanged"/>
-                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="warehouse_filterMouseClicked"/>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="warehouse_filterActionPerformed"/>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="fg_warehouse_filterItemStateChanged"/>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="fg_warehouse_filterMouseClicked"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fg_warehouse_filterActionPerformed"/>
                   </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
