--- a/src/gui/about/PACKAGE_07_ABOUT_UI0001.form
+++ b/src/gui/about/PACKAGE_07_ABOUT_UI0001.form
@@ -36,7 +36,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="splash_container" min="-2" pref="598" max="-2" attributes="0"/>
+          <Component id="splash_container" pref="592" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -151,9 +151,6 @@
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/__main__/images/postgresql-logo.png"/>
-            </Property>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[32, 32]"/>
             </Property>
           </Properties>
         </Component>
