--- a/src/gui/warehouse_dispatch/WAREHOUSE_DISPATCH_UI0005_EDIT_PLAN.form
+++ b/src/gui/warehouse_dispatch/WAREHOUSE_DISPATCH_UI0005_EDIT_PLAN.form
@@ -220,7 +220,7 @@
                     <Property name="text" type="java.lang.String" value="Magasin F.G"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="warehouse_filter">
+                <Component class="javax.swing.JComboBox" name="fg_warehouse_filter">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="0"/>
@@ -229,8 +229,8 @@
                     <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="warehouse_filterItemStateChanged"/>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="warehouse_filterActionPerformed"/>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="fg_warehouse_filterItemStateChanged"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fg_warehouse_filterActionPerformed"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel1">
